// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@@INIT 1`] = `
Object {
  "entities": Object {
    "entityLeaf": Object {
      "index": Array [
        1,
        2,
        3,
      ],
    },
  },
  "ui": Object {
    "uiLeaf": Object {
      "processingEntities": Array [],
    },
  },
}
`;

exports[`START_PROCESSING_ENTITY 1`] = `
Object {
  "entities": Object {
    "entityLeaf": Object {
      "index": Array [
        1,
        2,
        3,
      ],
    },
  },
  "ui": Object {
    "uiLeaf": Object {
      "processingEntities": Array [
        1,
      ],
    },
  },
}
`;

exports[`redux-tree throws on undefined state returned form action handler as a classic reducer 1`] = `
"
    Reducer at keypath [\\"ui\\",\\"uiLeaf\\"] returned undefined.
    To ignore an action, you must explicitly return the previous state.
    If you want this reducer to hold no value, you can return null instead of undefined.

    Keypath: [\\"ui\\",\\"uiLeaf\\"]
    Action: {\\"type\\":\\"@@redux/INIT\\"}
  "
`;
